css fix for agenda list overflow

--- a/frontend/src/app/dash-board/dash-board.component.scss
+++ b/frontend/src/app/dash-board/dash-board.component.scss
@@ -33,6 +33,8 @@
     padding: 0;
     width: 15em;
     display: inline-block;
+    height: 350px;
+    overflow: scroll;
     li {
         cursor: pointer;
         position: relative;
